--- a/OpenShift/app/build.gradle
+++ b/OpenShift/app/build.gradle
@@ -8,7 +8,7 @@ android {
         minSdkVersion 22
         targetSdkVersion 26
         versionCode 1
-        versionName "1.0"
+        versionName "v0.1-alpha"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
